Retry segment publish task actions without holding locks